# eaubbies

./: .dockerignore  .flake8  .gitignore  .hadolint.yaml  .prettierignore  .safehouse  .yamllint.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  build.yaml  config.yaml  docker-compose.yaml  repository.yaml
.claude/skills/: review.md
.github/: publish.yaml  release.yml
.github/actions/uv/: action.yaml
.github/workflows/: ci.yaml  deploy.yaml  publish.yaml  publish.yaml.old
.github/workflows/actions/uv/: action.yaml
eaubbies/: .dockerignore  .shellcheckrc  CHANGELOG.md  Dockerfile  build.yaml  config.yaml
eaubbies/entrypoint/: entrypoint.sh
eaubbies/entrypoint/entrypoint.d/: 0.sh
eaubbies/etc/nginx/conf.d/: app.template
eaubbies/etc/nginx/sites-available/: app.conf
eaubbies/etc/supervisor/: supervisord.conf
eaubbies/etc/supervisor/conf.d/: eaubbies.conf
eaubbies/src/: app.py  cron.py  gunicorn.conf.py  pyproject.toml  service.py  wsgi.py
eaubbies/src/command/: script.py
eaubbies/src/static/css/: demo.css  style.css
eaubbies/src/static/js/: form-wizard-numbered.js  main.js  setup.js
eaubbies/src/templates/: config.html  core.html  files.html  frames.html  index.html  index2.html  init-config.html  init.html  logs.html  video.html
eaubbies/src/templates/config/: config-azure-vision.html  config-frame.html  config-image-optimization.html  config-mqtt.html  config-rtsp.html  config-setup.html
eaubbies/src/tests/: test_eaubbies.py
eaubbies/src/utils/: azure_client.py  configuration.py  mqtt.py  paddle_ocr_client.py  rtsp_client.py  tesseract_client.py  utils.py
eaubbies/translations/: en.yaml
entrypoint/entrypoint.d/: 0.sh
etc/supervisor/conf.d/: gunicorn.conf
src/: app.py  pyproject.toml  script.py  service.py
src/data/config/: main.yaml
src/static/css/: style.css
src/static/js/: main.js
src/templates/: config.html  files.html  index.html
src/utils/: azure_client.py  configuration.py  mqtt.py  rtsp_client.py  utils.py
