[tool.poetry]
name = "eaubbies"
version = "0.1.0"
description = ""
authors = ["tle06 <tle@tlnk.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
azure-cognitiveservices-vision-computervision = "^0.9.0"
pillow = "^10.3.0"
black = "^24.4.0"
flake8 = "^7.0.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pyyaml = "^6.0.1"
flask = "^3.0.3"
aiortc = "^1.8.0"
python-crontab = "^3.0.0"
paho-mqtt = "^2.0.0"
gunicorn = "^22.0.0"
scikit-image = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
