[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.9.0",
    "azure-cognitiveservices-vision-computervision>=0.9.0",
    "black>=24.8.0",
    "flake8>=7.1.1",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "numpy>=2.1.1",
    "opencv-python>=4.10.0.84",
    "paho-mqtt>=2.1.0",
    "pillow>=10.4.0",
    "python-crontab>=3.2.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scikit-image>=0.24.0",
    "setuptools>=75.1.0",
    "supervisord-dependent-startup>=1.4.0",
]
