[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.9.0",
    "azure-cognitiveservices-vision-computervision>=0.9.0",
    "black>=24.8.0",
    "flake8>=7.1.1",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "numpy>=2.1.1",
    "opencv-python>=4.10.0.84",
    "paho-mqtt>=2.1.0",
    "pillow>=10.4.0",
    "python-crontab>=3.2.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scikit-image>=0.24.0",
    "setuptools>=75.1.0",
    "supervisord-dependent-startup>=1.4.0",
    "pytesseract>=0.3.13",
    "pytest>=8.0.0",
    "environs>=15.0.1",
    "azure-ai-vision-imageanalysis>=1.0.0",
    # PaddleOCR backends — install ONE of the following:
    # Lightweight ONNX (recommended for Raspberry Pi / embedded):
    #   pip install rapidocr-onnxruntime
    # Full PaddleOCR stack (highest accuracy):
    #   pip install paddlepaddle paddleocr
    # Both are optional; the client auto-detects which is available.
    "rapidocr-onnxruntime>=1.3.0; extra == 'paddle'",
    "rapidocr-onnxruntime>=1.4.4",
    "paddlepaddle>=3.3.1",
    "paddleocr>=2.10.0",
]

[project.optional-dependencies]
paddleocr-full = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
]
paddleocr-lite = [
    "rapidocr-onnxruntime>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
